--- a/index.html
+++ b/index.html
@@ -125,8 +125,38 @@
         <label for="trabajaDemandado">¿Tienes trabajo estable? </label>
         <input type="radio" name="trabajaDemandado"id="trabajaDemandado">Si
         <input type="radio" name="trabajaDemandado"id="trabajaDemandado">No   
-    </section >    
-</fieldset>
+    </section >
+</fieldset>  
+<fieldset>
+    <legend>Situacion economica del demandante</legend>
+    <section>
+        <label for="gastoMensual">Gastos basicos mensuales:</label>
+        <input type="number" name="" id="gastoMensual">
+    </section>
+    <section>
+        <label for="deudaMensual">Deudas mensuales:</label>
+        <input type="number" name="" id="deudaMensual">
+    </section>
+     <section>
+        <label for="ahorrosMensual">Ahorros mensuales:</label>
+        <input type="number" name="" id="ahorrosMensual">
+    </section>
+</fieldset>  
+<fieldset>
+    <legend>Situacion economica del demandado</legend>
+    <section>
+        <label for="gbasicosDemando">Gastos basicos mensuales:</label>
+        <input type="number" name="" id="gbasicosDemando">
+    </section>
+    <section>
+        <label for="deudaMensualDemandado">Deudas mensuales:</label>
+        <input type="number" name="" id="deudaMensualDemandado">
+    </section>
+     <section>
+        <label for="ahorrosMensualDemandado">Ahorros mensuales:</label>
+        <input type="number" name="" id="ahorrosMensualDemandado">
+    </section>
+</fieldset>       
 <fieldset>
     <legend>Numero de hijos en comun</legend>
         <label for="numeroHijos">Numero de hijos en comun:</label>
