--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <title>Formulario Demanda</title>
 </head>
 <body>
-    <h1>Formulario de Caracterizacion Socioeconomica - Demanda por alimentos</h1>
-    <form action="" method="get"> 
-    <fieldset>
+<header>
+    <center><h1>Formulario de Caracterizacion Socioeconomica - Demanda por alimentos</h1></center>
+</header>
+<form action=""> 
+    <section>
+        <fieldset>
         <legend>Datos personales del demandante</legend>
         <div>
             <label for="nombreDemandante">Nombre completo:</label>
@@ -23,8 +26,8 @@
             <input type="date" name="" id="fechaDemandante">
         </div>
         <div>
-            <label for="generoDemandate">Genero:</label> 
-            <select name="" id="generoDemandate">
+            <label for="generoDemandante">Genero:</label> 
+            <select name="" id="generoDemandante">
                 <option label="">Seleccionar</option>
                 <option label="">Masculino</option>
                 <option label="">Femenino</option>
@@ -46,9 +49,10 @@
             <label for="correoDemandante">Direccion:</label>
             <input type="email" name="" id="correoDemandante">
         </div>
-    </fieldset>    
- 
-    <fieldset>
+        </fieldset>   
+    </section>
+    <section>
+        <fieldset>
         <legend>Datos personales del demandado</legend>
         <div>
             <label for="nombreDemandado">Nombre completo:</label>
@@ -86,101 +90,118 @@
             <label for="mailDemandado">Direccion:</label>
             <input type="email" name="" id="mailDemandado">
         </div>
-    </fieldset>    
-<fieldset>
-    <legend>Situacion laboral demandante</legend>
+        </fieldset> 
+    </section>  
     <section>
-        <label for="ocupacionDemandante">Ocupacio actual:</label>
-        <input type="text"name="" id="ocupacionDemandante">
+        <fieldset>
+        <legend>Situacion laboral demandante</legend>
+        <div>
+            <label for="ocupacionDemandante">Ocupacio actual:</label>
+            <input type="text"name="" id="ocupacionDemandante">
+        </div>
+        <div>
+            <label for="ingresosDemandante">Ingresos mensuales:</label>
+            <input type="number" name="" id="ingresosDemandante">
+        </div>
+        <div>
+            <label for="horasTrabajoDemandante">Horas de trabajo por semana:</label>
+            <input type="number" name="" id="horasTrabajoDemandante">
+        </div>
+        <div>
+            <label for="trabajaDemandante">¿Tienes trabajo estable? </label>
+            <input type="radio" name="trabajaDemandante"id="trabajoDemandante">Si
+            <input type="radio" name="trabajaDemandante"id="trabajaDemandante">No   
+        </div>
+        </fieldset>
     </section>
     <section>
-        <label for="ingresosDemandante">Ingresos mensuales:</label>
-        <input type="number" name="" id="ingresosDemandante">
+        <fieldset>
+        <legend>Situacion laboral demandado</legend>
+        <div>
+            <label for="ocupacionDemandado">Ocupacio actual:</label>
+            <input type="text"name="" id="ocupacionDemandado">
+        </div>
+        <div>
+            <label for="ingresosDemandado">Ingresos mensuales:</label>
+            <input type="number" name="" id="ingresosDemandado">
+        </div>
+        <div>
+            <label for="horasTrabajoDemandado">Horas de trabajo por semana:</label>
+            <input type="number" name="" id="horasTrabajoDemandado">
+        </div>
+        <div>
+            <label for="trabajaDemandado">¿Tienes trabajo estable? </label>
+            <input type="radio" name="trabajaDemandado"id="trabajaDemandado">Si
+            <input type="radio" name="trabajaDemandado"id="trabajaDemandado">No   
+        </div>
+        </fieldset>
+    </section>  
+    <section>   
+        <fieldset>
+        <legend>Situacion economica del demandante</legend>
+        <div>
+            <label for="gastoMensual">Gastos basicos mensuales:</label>
+            <input type="number" name="" id="gastoMensual">
+        </div>
+        <div>
+            <label for="deudaMensual">Deudas mensuales:</label>
+            <input type="number" name="" id="deudaMensual">
+        </div>
+        <div>
+            <label for="ahorrosMensual">Ahorros mensuales:</label>
+            <input type="number" name="" id="ahorrosMensual">
+        </div>
+        </fieldset>
+    </section>
+    <section>   
+        <fieldset>
+        <legend>Situacion economica del demandado</legend>
+        <div>
+            <label for="gbasicosDemando">Gastos basicos mensuales:</label>
+            <input type="number" name="" id="gbasicosDemando">
+        </div>
+         <div>
+            <label for="deudaMensualDemandado">Deudas mensuales:</label>
+            <input type="number" name="" id="deudaMensualDemandado">
+        </div>
+        <div>
+            <label for="ahorrosMensualDemandado">Ahorros mensuales:</label>
+            <input type="number" name="" id="ahorrosMensualDemandado">
+        </div>
+        </fieldset>
+    </section> 
+    <section>        
+        <fieldset>
+        <legend>Numero de hijos en comun</legend>
+            <label for="numeroHijos">Numero de hijos en comun:</label>
+            <input type="number"name=""id="numeroHijos">
+       </fieldset>
+    </section>   
+    <section> 
+        <fieldset>
+        <legend>Informacion adicional</legend>
+        <div>
+            <label for="textoDemanda">Motivo de la demanda por alimentos:</label>
+            <textarea name="" id="textoDemanda" cols="55" rows="7"></textarea>
+        </div>
+        <div>   
+            <label for="">Documentos adjuntos (certificados,constancias,etc.):</label>
+            <input type="file"name="documento"id="">
+        </div>    
+        </fieldset>    
     </section>
     <section>
-        <label for="horasTrabajoDemandante">Horas de trabajo por semana:</label>
-        <input type="number" name="" id="horasTrabajoDemandante">
+        <fieldset>
+        <legend>Declaracion jurada</legend>
+        <p>Declaro bajo juramento que los datos proporcionados son veraces y que me encuentro en la situacion Socioeconomica descrita</p>
+            <label for="aceptacion">Acepto declaracion jurada</label>
+            <input type="checkbox" name="" id="aceptacion">
+        </fieldset>
     </section>
-    <section>
-        <label for="trabajaDemandante">¿Tienes trabajo estable? </label>
-        <input type="radio" name="trabajaDemandanteSi"id="trabajoDemandante">Si
-        <input type="radio" name="trabajaDemandanteSi"id="trabajaDemandante">No   
-    </section >    
-</fieldset>
-<fieldset>
-    <legend>Situacion laboral demandado</legend>
-    <section>
-        <label for="ocupacionDemandado">Ocupacio actual:</label>
-        <input type="text"name="" id="ocupacionDemandado">
-    </section>
-    <section>
-        <label for="ingresosDemandado">Ingresos mensuales:</label>
-        <input type="number" name="" id="ingresosDemandado">
-    </section>
-    <section>
-        <label for="horasTrabajoDemandado">Horas de trabajo por semana:</label>
-        <input type="number" name="" id="horasTrabajoDemandado">
-    </section>
-    <section>
-        <label for="trabajaDemandado">¿Tienes trabajo estable? </label>
-        <input type="radio" name="trabajaDemandado"id="trabajaDemandado">Si
-        <input type="radio" name="trabajaDemandado"id="trabajaDemandado">No   
-    </section >
-</fieldset>  
-<fieldset>
-    <legend>Situacion economica del demandante</legend>
-    <section>
-        <label for="gastoMensual">Gastos basicos mensuales:</label>
-        <input type="number" name="" id="gastoMensual">
-    </section>
-    <section>
-        <label for="deudaMensual">Deudas mensuales:</label>
-        <input type="number" name="" id="deudaMensual">
-    </section>
-     <section>
-        <label for="ahorrosMensual">Ahorros mensuales:</label>
-        <input type="number" name="" id="ahorrosMensual">
-    </section>
-</fieldset>  
-<fieldset>
-    <legend>Situacion economica del demandado</legend>
-    <section>
-        <label for="gbasicosDemando">Gastos basicos mensuales:</label>
-        <input type="number" name="" id="gbasicosDemando">
-    </section>
-    <section>
-        <label for="deudaMensualDemandado">Deudas mensuales:</label>
-        <input type="number" name="" id="deudaMensualDemandado">
-    </section>
-     <section>
-        <label for="ahorrosMensualDemandado">Ahorros mensuales:</label>
-        <input type="number" name="" id="ahorrosMensualDemandado">
-    </section>
-</fieldset>       
-<fieldset>
-    <legend>Numero de hijos en comun</legend>
-        <label for="numeroHijos">Numero de hijos en comun:</label>
-        <input type="number"name=""id="numeroHijos">
-</fieldset>
-<fieldset>
-    <legend>Informacion adicional</legend>
-        <label for="textoDemanda">Motivo demanda por alimentos:</label>
-    <textarea name="" id="textoDemanda" cols="55" rows="7"></textarea>
-    <section>
-        <label for="">Documentos adjuntos (certificados,constancias,etc.):</label>
-        <input type="file"name="documento"id="">
-    </section>
-</fieldset>
-<fieldset>
-    <legend>Declaracion jurada</legend>
-    <p>Declaro bajo juramento que los datos proporcionados son veraces y que me encuentro en la situacion Socioeconomica descrita</p>
-        <label for="aceptacion">Acepto declaracion jurada</label>
-        <input type="checkbox" name="" id="aceptacion">
-</fieldset>
-    <section>
+    <div>
         <label for="enviar"></label>
         <input type="button" value="enviar"id="enviar">
-    </section>
+    </div>               
 </form>     
 </body>
 </html>
